--- a/notebooks/api.ipynb
+++ b/notebooks/api.ipynb
@@ -294,7 +294,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "response = requests.get('http://api.dataatwork.org/v1/spec/skills-api.json')\n",
+    "response = requests.get('http://api.dataatwork.org/v1/spec/jo')\n",
     "\n",
     "json_data = response.json()\n",
     "\n",
