--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -9,200 +9,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<table border=\"1\" cellpadding=\"2\" cellspacing=\"0\" style=\"vertical-align:top;background-color:#f5faff\" width=\"80%\">\n",
-       " <tr>\n",
-       " <td>Belgium\n",
-       " </td>\n",
-       " <td>(BE)\n",
-       " </td>\n",
-       " <td>Greece\n",
-       " </td>\n",
-       " <td>(EL)\n",
-       " </td>\n",
-       " <td>Lithuania\n",
-       " </td>\n",
-       " <td>(LT)\n",
-       " </td>\n",
-       " <td>Portugal\n",
-       " </td>\n",
-       " <td>(PT)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td>Bulgaria\n",
-       " </td>\n",
-       " <td>(BG)\n",
-       " </td>\n",
-       " <td>Spain\n",
-       " </td>\n",
-       " <td>(ES)\n",
-       " </td>\n",
-       " <td>Luxembourg\n",
-       " </td>\n",
-       " <td>(LU)\n",
-       " </td>\n",
-       " <td>Romania\n",
-       " </td>\n",
-       " <td>(RO)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td>Czechia\n",
-       " </td>\n",
-       " <td>(CZ)\n",
-       " </td>\n",
-       " <td>France\n",
-       " </td>\n",
-       " <td>(FR)\n",
-       " </td>\n",
-       " <td>Hungary\n",
-       " </td>\n",
-       " <td>(HU)\n",
-       " </td>\n",
-       " <td>Slovenia\n",
-       " </td>\n",
-       " <td>(SI)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td>Denmark\n",
-       " </td>\n",
-       " <td>(DK)\n",
-       " </td>\n",
-       " <td>Croatia\n",
-       " </td>\n",
-       " <td>(HR)\n",
-       " </td>\n",
-       " <td>Malta\n",
-       " </td>\n",
-       " <td>(MT)\n",
-       " </td>\n",
-       " <td>Slovakia\n",
-       " </td>\n",
-       " <td>(SK)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td>Germany\n",
-       " </td>\n",
-       " <td>(DE)\n",
-       " </td>\n",
-       " <td>Italy\n",
-       " </td>\n",
-       " <td>(IT)\n",
-       " </td>\n",
-       " <td>Netherlands\n",
-       " </td>\n",
-       " <td>(NL)\n",
-       " </td>\n",
-       " <td>Finland\n",
-       " </td>\n",
-       " <td>(FI)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td>Estonia\n",
-       " </td>\n",
-       " <td>(EE)\n",
-       " </td>\n",
-       " <td>Cyprus\n",
-       " </td>\n",
-       " <td>(CY)\n",
-       " </td>\n",
-       " <td>Austria\n",
-       " </td>\n",
-       " <td>(AT)\n",
-       " </td>\n",
-       " <td>Sweden\n",
-       " </td>\n",
-       " <td>(SE)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td>Ireland\n",
-       " </td>\n",
-       " <td>(IE)\n",
-       " </td>\n",
-       " <td>Latvia\n",
-       " </td>\n",
-       " <td>(LV)\n",
-       " </td>\n",
-       " <td>Poland\n",
-       " </td>\n",
-       " <td>(PL)\n",
-       " </td></tr></table>,\n",
-       " <table border=\"1\" cellpadding=\"2\" cellspacing=\"0\" style=\"background-color: #f5faff; vertical-align: top\" width=\"35%\">\n",
-       " <tr>\n",
-       " <td> United Kingdom\n",
-       " </td>\n",
-       " <td> (UK)\n",
-       " </td>\n",
-       " <td>\n",
-       " </td></tr></table>,\n",
-       " <table border=\"1\" cellpadding=\"2\" cellspacing=\"0\" style=\"background-color: #f5faff; vertical-align: top\" width=\"35%\">\n",
-       " <tr>\n",
-       " <td> Iceland\n",
-       " </td>\n",
-       " <td> (IS)\n",
-       " </td>\n",
-       " <td>\n",
-       " </td>\n",
-       " <td> Norway\n",
-       " </td>\n",
-       " <td> (NO)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td> Liechtenstein\n",
-       " </td>\n",
-       " <td> (LI)\n",
-       " </td>\n",
-       " <td>\n",
-       " </td>\n",
-       " <td> Switzerland\n",
-       " </td>\n",
-       " <td> (CH)\n",
-       " </td></tr></table>,\n",
-       " <table border=\"1\" cellpadding=\"2\" cellspacing=\"0\" style=\"background-color: #f5faff; vertical-align: top\" width=\"50%\">\n",
-       " <tr>\n",
-       " <td> Montenegro\n",
-       " </td>\n",
-       " <td> (ME)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td> North Macedonia\n",
-       " </td>\n",
-       " <td> (MK)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td> Albania\n",
-       " </td>\n",
-       " <td> (AL)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td>Serbia\n",
-       " </td>\n",
-       " <td> (RS)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td> Turkey\n",
-       " </td>\n",
-       " <td> (TR)\n",
-       " </td></tr></table>,\n",
-       " <table border=\"1\" cellpadding=\"2\" cellspacing=\"0\" style=\"background-color: #f5faff; vertical-align: top\" width=\"50%\">\n",
-       " <tr>\n",
-       " <td> Bosnia and Herzegovina\n",
-       " </td>\n",
-       " <td> (BA)\n",
-       " </td></tr>\n",
-       " <tr>\n",
-       " <td> Kosovo*<sup class=\"reference\" id=\"cite_ref-1\"><a href=\"#cite_note-1\">[1]</a></sup>\n",
-       " </td>\n",
-       " <td> (XK<sup class=\"reference\" id=\"cite_ref-2\"><a href=\"#cite_note-2\">[2]</a></sup>)\n",
-       " </td></tr>\n",
-       " </table>]"
+       "<table border=\"1\" cellpadding=\"2\" cellspacing=\"0\" style=\"vertical-align:top;background-color:#f5faff\" width=\"80%\">\n",
+       "<tr>\n",
+       "<td>Belgium\n",
+       "</td>\n",
+       "<td>(BE)\n",
+       "</td>\n",
+       "<td>Greece\n",
+       "</td>\n",
+       "<td>(EL)\n",
+       "</td>\n",
+       "<td>Lithuania\n",
+       "</td>\n",
+       "<td>(LT)\n",
+       "</td>\n",
+       "<td>Portugal\n",
+       "</td>\n",
+       "<td>(PT)\n",
+       "</td></tr>\n",
+       "<tr>\n",
+       "<td>Bulgaria\n",
+       "</td>\n",
+       "<td>(BG)\n",
+       "</td>\n",
+       "<td>Spain\n",
+       "</td>\n",
+       "<td>(ES)\n",
+       "</td>\n",
+       "<td>Luxembourg\n",
+       "</td>\n",
+       "<td>(LU)\n",
+       "</td>\n",
+       "<td>Romania\n",
+       "</td>\n",
+       "<td>(RO)\n",
+       "</td></tr>\n",
+       "<tr>\n",
+       "<td>Czechia\n",
+       "</td>\n",
+       "<td>(CZ)\n",
+       "</td>\n",
+       "<td>France\n",
+       "</td>\n",
+       "<td>(FR)\n",
+       "</td>\n",
+       "<td>Hungary\n",
+       "</td>\n",
+       "<td>(HU)\n",
+       "</td>\n",
+       "<td>Slovenia\n",
+       "</td>\n",
+       "<td>(SI)\n",
+       "</td></tr>\n",
+       "<tr>\n",
+       "<td>Denmark\n",
+       "</td>\n",
+       "<td>(DK)\n",
+       "</td>\n",
+       "<td>Croatia\n",
+       "</td>\n",
+       "<td>(HR)\n",
+       "</td>\n",
+       "<td>Malta\n",
+       "</td>\n",
+       "<td>(MT)\n",
+       "</td>\n",
+       "<td>Slovakia\n",
+       "</td>\n",
+       "<td>(SK)\n",
+       "</td></tr>\n",
+       "<tr>\n",
+       "<td>Germany\n",
+       "</td>\n",
+       "<td>(DE)\n",
+       "</td>\n",
+       "<td>Italy\n",
+       "</td>\n",
+       "<td>(IT)\n",
+       "</td>\n",
+       "<td>Netherlands\n",
+       "</td>\n",
+       "<td>(NL)\n",
+       "</td>\n",
+       "<td>Finland\n",
+       "</td>\n",
+       "<td>(FI)\n",
+       "</td></tr>\n",
+       "<tr>\n",
+       "<td>Estonia\n",
+       "</td>\n",
+       "<td>(EE)\n",
+       "</td>\n",
+       "<td>Cyprus\n",
+       "</td>\n",
+       "<td>(CY)\n",
+       "</td>\n",
+       "<td>Austria\n",
+       "</td>\n",
+       "<td>(AT)\n",
+       "</td>\n",
+       "<td>Sweden\n",
+       "</td>\n",
+       "<td>(SE)\n",
+       "</td></tr>\n",
+       "<tr>\n",
+       "<td>Ireland\n",
+       "</td>\n",
+       "<td>(IE)\n",
+       "</td>\n",
+       "<td>Latvia\n",
+       "</td>\n",
+       "<td>(LV)\n",
+       "</td>\n",
+       "<td>Poland\n",
+       "</td>\n",
+       "<td>(PL)\n",
+       "</td></tr></table>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,25 +155,20 @@
     "\n",
     "soup = BeautifulSoup(html, 'lxml')\n",
     "#print(soup.prettify())\n",
-    "table = soup.find_all('table')\n",
-    "table[0:5]"
+    "table = soup.find('table')\n",
+    "table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "ResultSet object has no attribute 'find_all'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-65-db7397d32121>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrows\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#print(tr)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ih_project/lib/python3.7/site-packages/bs4/element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2159\u001b[0m         \u001b[0;34m\"\"\"Raise a helpful exception to explain a common code fix.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2160\u001b[0m         raise AttributeError(\n\u001b[0;32m-> 2161\u001b[0;31m             \u001b[0;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2162\u001b[0m         )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: ResultSet object has no attribute 'find_all'. You're probably treating a list of elements like a single element. Did you call find_all() when you meant to call find()?"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Belgium', 'BE', 'Greece', 'EL', 'Lithuania', 'LT', 'Portugal', 'PT', 'Bulgaria', 'BG', 'Spain', 'ES', 'Luxembourg', 'LU', 'Romania', 'RO', 'Czechia', 'CZ', 'France', 'FR', 'Hungary', 'HU', 'Slovenia', 'SI', 'Denmark', 'DK', 'Croatia', 'HR', 'Malta', 'MT', 'Slovakia', 'SK', 'Germany', 'DE', 'Italy', 'IT', 'Netherlands', 'NL', 'Finland', 'FI', 'Estonia', 'EE', 'Cyprus', 'CY', 'Austria', 'AT', 'Sweden', 'SE', 'Ireland', 'IE', 'Latvia', 'LV', 'Poland', 'PL']\n"
      ]
     }
    ],
@@ -246,17 +177,59 @@
     "c = []\n",
     "rows = table.find_all('tr')\n",
     "for tr in rows:\n",
-    "    #print(tr)\n",
     "    cols = tr.find_all('td')\n",
     "    for td in cols:\n",
-    "        #print(td.text)\n",
     "        c.append(td.text)\n",
     "        \n",
     "x = []\n",
     "for i in c:\n",
-    "    f = i.replace('\\n', '').replace('(','')\n",
+    "    f = i.replace('\\n', '').replace('(','').replace(')','')\n",
     "    x.append(f)\n",
-    "x"
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-5da786b5bf79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-37-5da786b5bf79>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "countries = {key: value for value, key in zip(x)}\n",
+    "countries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-38-55f29ebcfcfd>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-55f29ebcfcfd>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    k =\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = []\n",
+    "for i in x:\n",
+    "    k = \n",
+    "    "
    ]
   },
   {
