--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -9,227 +9,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<table border=\"1\" cellpadding=\"2\" cellspacing=\"0\" style=\"vertical-align:top;background-color:#f5faff\" width=\"80%\">\n",
-       "<tr>\n",
-       "<td>Belgium\n",
-       "</td>\n",
-       "<td>(BE)\n",
-       "</td>\n",
-       "<td>Greece\n",
-       "</td>\n",
-       "<td>(EL)\n",
-       "</td>\n",
-       "<td>Lithuania\n",
-       "</td>\n",
-       "<td>(LT)\n",
-       "</td>\n",
-       "<td>Portugal\n",
-       "</td>\n",
-       "<td>(PT)\n",
-       "</td></tr>\n",
-       "<tr>\n",
-       "<td>Bulgaria\n",
-       "</td>\n",
-       "<td>(BG)\n",
-       "</td>\n",
-       "<td>Spain\n",
-       "</td>\n",
-       "<td>(ES)\n",
-       "</td>\n",
-       "<td>Luxembourg\n",
-       "</td>\n",
-       "<td>(LU)\n",
-       "</td>\n",
-       "<td>Romania\n",
-       "</td>\n",
-       "<td>(RO)\n",
-       "</td></tr>\n",
-       "<tr>\n",
-       "<td>Czechia\n",
-       "</td>\n",
-       "<td>(CZ)\n",
-       "</td>\n",
-       "<td>France\n",
-       "</td>\n",
-       "<td>(FR)\n",
-       "</td>\n",
-       "<td>Hungary\n",
-       "</td>\n",
-       "<td>(HU)\n",
-       "</td>\n",
-       "<td>Slovenia\n",
-       "</td>\n",
-       "<td>(SI)\n",
-       "</td></tr>\n",
-       "<tr>\n",
-       "<td>Denmark\n",
-       "</td>\n",
-       "<td>(DK)\n",
-       "</td>\n",
-       "<td>Croatia\n",
-       "</td>\n",
-       "<td>(HR)\n",
-       "</td>\n",
-       "<td>Malta\n",
-       "</td>\n",
-       "<td>(MT)\n",
-       "</td>\n",
-       "<td>Slovakia\n",
-       "</td>\n",
-       "<td>(SK)\n",
-       "</td></tr>\n",
-       "<tr>\n",
-       "<td>Germany\n",
-       "</td>\n",
-       "<td>(DE)\n",
-       "</td>\n",
-       "<td>Italy\n",
-       "</td>\n",
-       "<td>(IT)\n",
-       "</td>\n",
-       "<td>Netherlands\n",
-       "</td>\n",
-       "<td>(NL)\n",
-       "</td>\n",
-       "<td>Finland\n",
-       "</td>\n",
-       "<td>(FI)\n",
-       "</td></tr>\n",
-       "<tr>\n",
-       "<td>Estonia\n",
-       "</td>\n",
-       "<td>(EE)\n",
-       "</td>\n",
-       "<td>Cyprus\n",
-       "</td>\n",
-       "<td>(CY)\n",
-       "</td>\n",
-       "<td>Austria\n",
-       "</td>\n",
-       "<td>(AT)\n",
-       "</td>\n",
-       "<td>Sweden\n",
-       "</td>\n",
-       "<td>(SE)\n",
-       "</td></tr>\n",
-       "<tr>\n",
-       "<td>Ireland\n",
-       "</td>\n",
-       "<td>(IE)\n",
-       "</td>\n",
-       "<td>Latvia\n",
-       "</td>\n",
-       "<td>(LV)\n",
-       "</td>\n",
-       "<td>Poland\n",
-       "</td>\n",
-       "<td>(PL)\n",
-       "</td></tr></table>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import lxml.html as lh\n",
     "import pandas as pd\n",
-    "\n",
-    "url = 'https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Country_codes'\n",
-    "html = requests.get(url).content\n",
-    "\n",
-    "\n",
-    "soup = BeautifulSoup(html, 'lxml')\n",
-    "#print(soup.prettify())\n",
-    "table = soup.find('table')\n",
-    "table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Belgium', 'BE', 'Greece', 'EL', 'Lithuania', 'LT', 'Portugal', 'PT', 'Bulgaria', 'BG', 'Spain', 'ES', 'Luxembourg', 'LU', 'Romania', 'RO', 'Czechia', 'CZ', 'France', 'FR', 'Hungary', 'HU', 'Slovenia', 'SI', 'Denmark', 'DK', 'Croatia', 'HR', 'Malta', 'MT', 'Slovakia', 'SK', 'Germany', 'DE', 'Italy', 'IT', 'Netherlands', 'NL', 'Finland', 'FI', 'Estonia', 'EE', 'Cyprus', 'CY', 'Austria', 'AT', 'Sweden', 'SE', 'Ireland', 'IE', 'Latvia', 'LV', 'Poland', 'PL']\n"
-     ]
-    }
-   ],
-   "source": [
     "import re \n",
-    "c = []\n",
-    "rows = table.find_all('tr')\n",
-    "for tr in rows:\n",
-    "    cols = tr.find_all('td')\n",
-    "    for td in cols:\n",
-    "        c.append(td.text)\n",
-    "        \n",
-    "x = []\n",
-    "for i in c:\n",
-    "    f = i.replace('\\n', '').replace('(','').replace(')','')\n",
-    "    x.append(f)\n",
-    "print(x)"
+    "\n",
+    "def get_country():\n",
+    "    url = 'https://ec.europa.eu/eurostat/statistics-explained/index.php/Glossary:Country_codes'\n",
+    "    html = requests.get(url).content\n",
+    "    soup = BeautifulSoup(html, 'lxml')\n",
+    "    table = soup.find('table')\n",
+    "    return table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-5da786b5bf79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-37-5da786b5bf79>\u001b[0m in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries = {key: value for value, key in zip(x)}\n",
-    "countries"
+    "def countries_all(table):\n",
+    "    countries = []\n",
+    "    \n",
+    "    rows = table.find_all('tr')\n",
+    "    \n",
+    "    for tr in rows:\n",
+    "        cols = tr.find_all('td')\n",
+    "        for td in cols:\n",
+    "            countries.append(td.text)\n",
+    "            \n",
+    "    countries_list = [i.replace('\\n', '').replace('(','').replace(')','') for i in countries]\n",
+    "    two_cols = [countries_list[i:i+2] for i in range(0, len(countries_list), 2)]\n",
+    "    countries_df = pd.DataFrame(two_cols)\n",
+    "    \n",
+    "    return countries_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-55f29ebcfcfd>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-55f29ebcfcfd>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    k =\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>BE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Greece</td>\n",
+       "      <td>EL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>LT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>PT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>BG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>ES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Luxembourg</td>\n",
+       "      <td>LU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>RO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Czechia</td>\n",
+       "      <td>CZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>France</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Hungary</td>\n",
+       "      <td>HU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Slovenia</td>\n",
+       "      <td>SI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>DK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>HR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Malta</td>\n",
+       "      <td>MT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Slovakia</td>\n",
+       "      <td>SK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>DE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>NL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>FI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Estonia</td>\n",
+       "      <td>EE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Cyprus</td>\n",
+       "      <td>CY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>AT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>SE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>IE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Latvia</td>\n",
+       "      <td>LV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Poland</td>\n",
+       "      <td>PL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              0   1\n",
+       "0       Belgium  BE\n",
+       "1        Greece  EL\n",
+       "2     Lithuania  LT\n",
+       "3      Portugal  PT\n",
+       "4      Bulgaria  BG\n",
+       "5         Spain  ES\n",
+       "6    Luxembourg  LU\n",
+       "7       Romania  RO\n",
+       "8       Czechia  CZ\n",
+       "9        France  FR\n",
+       "10      Hungary  HU\n",
+       "11     Slovenia  SI\n",
+       "12      Denmark  DK\n",
+       "13      Croatia  HR\n",
+       "14        Malta  MT\n",
+       "15     Slovakia  SK\n",
+       "16      Germany  DE\n",
+       "17        Italy  IT\n",
+       "18  Netherlands  NL\n",
+       "19      Finland  FI\n",
+       "20      Estonia  EE\n",
+       "21       Cyprus  CY\n",
+       "22      Austria  AT\n",
+       "23       Sweden  SE\n",
+       "24      Ireland  IE\n",
+       "25       Latvia  LV\n",
+       "26       Poland  PL"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "e = []\n",
-    "for i in x:\n",
-    "    k = \n",
-    "    "
+    "countries_all(table)"
    ]
   },
   {
