--- a/notebooks/api.ipynb
+++ b/notebooks/api.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,13 @@
     "        job_name = get_job(job)\n",
     "        jobs_name.append(job_name)\n",
     "    jobs_df = pd.DataFrame(jobs_name)\n",
+    "    jobs_df.to_csv(f'/home/juan/IronHack/ih_datamadpt0420_project_m1/data/raw/jobs.csv')\n",
     "    return jobs_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +109,7 @@
        "1                   data coordinator  0b9dd32a367f4562ec77b993053d1910  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
