--- a/notebooks/web_scraping.ipynb
+++ b/notebooks/web_scraping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +45,15 @@
     "            \n",
     "    countries_list = [i.replace('\\n', '').replace('(','').replace(')','') for i in countries]\n",
     "    two_cols = [countries_list[i:i+2] for i in range(0, len(countries_list), 2)]\n",
-    "    countries_df = pd.DataFrame(two_cols)\n",
-    "    \n",
+    "    countries = pd.DataFrame(two_cols)\n",
+    "    countries_df = countries.rename(columns={countries.columns[1]: \"country_code\"})\n",
+    "    #countries_df_col.to_csv(f'/home/juan/IronHack/ih_datamadpt0420_project_m1/data/raw/countries.csv')\n",
     "    return countries_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +78,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>country_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -221,43 +222,44 @@
        "</div>"
       ],
       "text/plain": [
-       "              0   1\n",
-       "0       Belgium  BE\n",
-       "1        Greece  EL\n",
-       "2     Lithuania  LT\n",
-       "3      Portugal  PT\n",
-       "4      Bulgaria  BG\n",
-       "5         Spain  ES\n",
-       "6    Luxembourg  LU\n",
-       "7       Romania  RO\n",
-       "8       Czechia  CZ\n",
-       "9        France  FR\n",
-       "10      Hungary  HU\n",
-       "11     Slovenia  SI\n",
-       "12      Denmark  DK\n",
-       "13      Croatia  HR\n",
-       "14        Malta  MT\n",
-       "15     Slovakia  SK\n",
-       "16      Germany  DE\n",
-       "17        Italy  IT\n",
-       "18  Netherlands  NL\n",
-       "19      Finland  FI\n",
-       "20      Estonia  EE\n",
-       "21       Cyprus  CY\n",
-       "22      Austria  AT\n",
-       "23       Sweden  SE\n",
-       "24      Ireland  IE\n",
-       "25       Latvia  LV\n",
-       "26       Poland  PL"
+       "              0 country_code\n",
+       "0       Belgium           BE\n",
+       "1        Greece           EL\n",
+       "2     Lithuania           LT\n",
+       "3      Portugal           PT\n",
+       "4      Bulgaria           BG\n",
+       "5         Spain           ES\n",
+       "6    Luxembourg           LU\n",
+       "7       Romania           RO\n",
+       "8       Czechia           CZ\n",
+       "9        France           FR\n",
+       "10      Hungary           HU\n",
+       "11     Slovenia           SI\n",
+       "12      Denmark           DK\n",
+       "13      Croatia           HR\n",
+       "14        Malta           MT\n",
+       "15     Slovakia           SK\n",
+       "16      Germany           DE\n",
+       "17        Italy           IT\n",
+       "18  Netherlands           NL\n",
+       "19      Finland           FI\n",
+       "20      Estonia           EE\n",
+       "21       Cyprus           CY\n",
+       "22      Austria           AT\n",
+       "23       Sweden           SE\n",
+       "24      Ireland           IE\n",
+       "25       Latvia           LV\n",
+       "26       Poland           PL"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries_all(table)"
+    "df = countries_all(table)\n",
+    "df"
    ]
   },
   {
