--- a/notebooks/cleaning_data.ipynb
+++ b/notebooks/cleaning_data.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "[9649 rows x 19 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "27           SK                                           Slovakia"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,21 +1081,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analysis_data(df_1, country):\n",
+    "def analysis_data(df_1):\n",
     "    df = df_1[df_1['title'].notna()]\n",
-    "    df_2 = df[['English short name (using title case)', 'title', 'age_group', 'uuid']]\n",
-    "    df_3 = df_2[df_2['English short name (using title case)'] == f'{country}']\n",
-    "    #k = df_2.groupby(['English short name (using title case)', 'title','age_group']).size()\n",
-    "    return df_3\n"
+    "    #df2 = df[df['English short name (using title case)'] == 'Spain']\n",
+    "    df3 = df[['English short name (using title case)', 'title', 'age_group', 'uuid', 'country_code']]\n",
+    "    k = pd.DataFrame(df3.groupby(['English short name (using title case)', 'title','age_group']).size()).reset_index()\n",
+    "    k = k.rename(columns={0: 'counts'})\n",
+    "    k['percetange'] = k['counts'].apply(lambda x: '{:.3%}'.format((x)/k['counts'].sum()))\n",
+    "    #k.to_csv(f'/home/juan/IronHack/ih_datamadpt0420_project_m1/data/results/prueba.csv')\n",
+    "    return k\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1122,44 +1125,50 @@
        "      <th>English short name (using title case)</th>\n",
        "      <th>title</th>\n",
        "      <th>age_group</th>\n",
-       "      <th>uuid</th>\n",
+       "      <th>counts</th>\n",
+       "      <th>percetange</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Automatic Data Processing Customer Liaison (AD...</td>\n",
+       "      <td>26_39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.018%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>Automatic Data Processing Customer Liaison (AD...</td>\n",
+       "      <td>40_65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.018%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>Austria</td>\n",
        "      <td>Automatic Data Processing Planner</td>\n",
        "      <td>40_65</td>\n",
-       "      <td>54f0f1c0-dda1-0133-a559-0a81e8b09a82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.035%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Austria</td>\n",
-       "      <td>Data Coordinator</td>\n",
-       "      <td>40_65</td>\n",
-       "      <td>15626d40-db13-0133-ea5c-0a81e8b09a82</td>\n",
+       "      <td>Automatic Data Processing Systems Security Spe...</td>\n",
+       "      <td>26_39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.018%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Austria</td>\n",
-       "      <td>Database Developer</td>\n",
+       "      <td>Automatic Data Processing Systems Security Spe...</td>\n",
        "      <td>40_65</td>\n",
-       "      <td>24954a70-db98-0133-4a64-0a81e8b09a82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Data Entry Specialist</td>\n",
-       "      <td>26_39</td>\n",
-       "      <td>28583060-dbe2-0133-ff9c-0a81e8b09a82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Database Architect</td>\n",
-       "      <td>40_65</td>\n",
-       "      <td>dd743bb0-d9a5-0133-53b2-0a81e8b09a82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.018%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1167,98 +1176,104 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Electronic Data Processing Auditor (EDP Auditor)</td>\n",
+       "      <th>2868</th>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>SCADA Technician (Supervisory Control and Data...</td>\n",
        "      <td>26_39</td>\n",
-       "      <td>f8f95970-da28-0133-75d2-0a81e8b09a82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.018%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Database Coordinator</td>\n",
-       "      <td>40_65</td>\n",
-       "      <td>f8fca690-de54-0133-23b6-0a81e8b09a82</td>\n",
+       "      <th>2869</th>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>SQL Database Administrator</td>\n",
+       "      <td>14_25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.053%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Databases Computer Consultant</td>\n",
+       "      <th>2870</th>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>SQL Database Administrator</td>\n",
        "      <td>26_39</td>\n",
-       "      <td>a96ac600-da2f-0133-a7cd-0a81e8b09a82</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.035%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Data Management Associate</td>\n",
+       "      <th>2871</th>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>SQL Database Administrator</td>\n",
        "      <td>40_65</td>\n",
-       "      <td>5586f290-d972-0133-f6e5-0a81e8b09a82</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.053%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>Database Security Administrator</td>\n",
-       "      <td>40_65</td>\n",
-       "      <td>cd77ebc0-de28-0133-657e-0a81e8b09a82</td>\n",
+       "      <th>2872</th>\n",
+       "      <td>United Kingdom of Great Britain and Northern I...</td>\n",
+       "      <td>Survey Data Technician</td>\n",
+       "      <td>26_39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.018%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>74 rows × 4 columns</p>\n",
+       "<p>2873 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    English short name (using title case)  \\\n",
-       "1                                 Austria   \n",
-       "3                                 Austria   \n",
-       "4                                 Austria   \n",
-       "5                                 Austria   \n",
-       "7                                 Austria   \n",
-       "..                                    ...   \n",
-       "127                               Austria   \n",
-       "128                               Austria   \n",
-       "129                               Austria   \n",
-       "131                               Austria   \n",
-       "132                               Austria   \n",
+       "                  English short name (using title case)  \\\n",
+       "0                                               Austria   \n",
+       "1                                               Austria   \n",
+       "2                                               Austria   \n",
+       "3                                               Austria   \n",
+       "4                                               Austria   \n",
+       "...                                                 ...   \n",
+       "2868  United Kingdom of Great Britain and Northern I...   \n",
+       "2869  United Kingdom of Great Britain and Northern I...   \n",
+       "2870  United Kingdom of Great Britain and Northern I...   \n",
+       "2871  United Kingdom of Great Britain and Northern I...   \n",
+       "2872  United Kingdom of Great Britain and Northern I...   \n",
        "\n",
-       "                                                title age_group  \\\n",
-       "1                   Automatic Data Processing Planner     40_65   \n",
-       "3                                    Data Coordinator     40_65   \n",
-       "4                                  Database Developer     40_65   \n",
-       "5                               Data Entry Specialist     26_39   \n",
-       "7                                  Database Architect     40_65   \n",
-       "..                                                ...       ...   \n",
-       "127  Electronic Data Processing Auditor (EDP Auditor)     26_39   \n",
-       "128                              Database Coordinator     40_65   \n",
-       "129                     Databases Computer Consultant     26_39   \n",
-       "131                         Data Management Associate     40_65   \n",
-       "132                   Database Security Administrator     40_65   \n",
+       "                                                  title age_group  counts  \\\n",
+       "0     Automatic Data Processing Customer Liaison (AD...     26_39       1   \n",
+       "1     Automatic Data Processing Customer Liaison (AD...     40_65       1   \n",
+       "2                     Automatic Data Processing Planner     40_65       2   \n",
+       "3     Automatic Data Processing Systems Security Spe...     26_39       1   \n",
+       "4     Automatic Data Processing Systems Security Spe...     40_65       1   \n",
+       "...                                                 ...       ...     ...   \n",
+       "2868  SCADA Technician (Supervisory Control and Data...     26_39       1   \n",
+       "2869                         SQL Database Administrator     14_25       3   \n",
+       "2870                         SQL Database Administrator     26_39       2   \n",
+       "2871                         SQL Database Administrator     40_65       3   \n",
+       "2872                             Survey Data Technician     26_39       1   \n",
        "\n",
-       "                                     uuid  \n",
-       "1    54f0f1c0-dda1-0133-a559-0a81e8b09a82  \n",
-       "3    15626d40-db13-0133-ea5c-0a81e8b09a82  \n",
-       "4    24954a70-db98-0133-4a64-0a81e8b09a82  \n",
-       "5    28583060-dbe2-0133-ff9c-0a81e8b09a82  \n",
-       "7    dd743bb0-d9a5-0133-53b2-0a81e8b09a82  \n",
-       "..                                    ...  \n",
-       "127  f8f95970-da28-0133-75d2-0a81e8b09a82  \n",
-       "128  f8fca690-de54-0133-23b6-0a81e8b09a82  \n",
-       "129  a96ac600-da2f-0133-a7cd-0a81e8b09a82  \n",
-       "131  5586f290-d972-0133-f6e5-0a81e8b09a82  \n",
-       "132  cd77ebc0-de28-0133-657e-0a81e8b09a82  \n",
+       "     percetange  \n",
+       "0        0.018%  \n",
+       "1        0.018%  \n",
+       "2        0.035%  \n",
+       "3        0.018%  \n",
+       "4        0.018%  \n",
+       "...         ...  \n",
+       "2868     0.018%  \n",
+       "2869     0.053%  \n",
+       "2870     0.035%  \n",
+       "2871     0.053%  \n",
+       "2872     0.018%  \n",
        "\n",
-       "[74 rows x 4 columns]"
+       "[2873 rows x 5 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "q = analysis_data(df_1,)\n",
-    "q"
+    "q\n"
    ]
   },
   {
